	- changed: dropped "-funroll-loops" from the set of default
		   compiler options
	- changed: comment out many entries in the global installed
		   'ecasoundrc' file (entries are redundant as the same
	 	   defaults are already set in the program binaries)
	- changed: optimized inner loops in core chain routing and
		   mixdown functions (with liboil if available)
	- changed: optimied innter loops of -ea, -ead, -eac, and -epp 
	- fixed: mp3 output was broken with lame 3.98 (and newer); 
		 the default lame parameters have now been updated 
		 and have been tested with lame 3.96, 3.97 and with
		 the latest 3.98.2
	- fixed: bad audio with 'resample' object, non-integer sampling 
		 rate changes ratios and output to JACK; ecasound did
		 emit warning about this, but did not raise a fatal 
		 error; now the underlying problem is fixed and now
		 'resample' and 'jack' objects maybe safely used 
		 together
08022009 (v2.6.0) -** stable release **-
	- note: key changes are described in more detail at:
                http://eca.cx/relnotes/ecasound_v2_6_0_relnotes.txt
	- added: new optional params to 'jack' -> 'jack,clientname,portprefix';
		 replaces old interfaces 'jack_auto', 'jack_generic' 
		 and 'jack_alsa'; see ecasound(1) for more details
	- added: interactive mode - new commands 'jack-connect', 
		 'jack-disconnect' and 'jack-list-connections'; see 
		 ecasound-iam(1) for details; closes sffeat:2134183
	- added: 'jack_multi', see ecasound(1); closes sffeat:1415822
	- added: ecasound options '--server', '--server-tcp-port' and
		 '--no-server'; these replace the misleading old
		 options '--daemon', '--nodaemon' and '--daemon-port', 
		 which are now deprecated
	- added: extended unit tests to cover option parsing, with
		 some initial test cases
        - added: unit test framework - minor improvements including
		 abilitity to select which cases to run
	- added: ECI - functions eci_ready() and eci_ready_r() added